Вторая серия замечаний, кроме структуры NN

--- a/temp.tex
+++ b/temp.tex
@@ -208,13 +208,13 @@
 	\NepS {\bf Вызванные потенциалы}
 	\par Вызванный потенциал — электрическая реакция мозга на внешний раздражитель или на выполнение некоторого ментального задания. Потенциалы данного вида имеют место в течение определённого промежутка времени после воздействия стимула.
 	\paragraph{Волны P300.}
-	\parВолна P300 -- положительное отклонение сигнала ЭЭГ, имеющее место ориентировочно через 300 мс после воздействия стимула с малой вероятностью появления, описывающего некоторое действие. Для порождения подобного рода волн испытуемый должен пронаблюдать последовательность двух типов стимулов. Первый тип стимулов (т.н. {\it целевые} стимулы) являются редкими в последовательности стимулов, в отличие от другого типа стимулов (т.н. {\it нецелевые} стимулы). Таким образом, во время появления целевого стимула может быть зафиксирована мозговая активность, содержащая волны P300. Данный принцип был применен в системе {\it BCI}, разработанной в исследовании \cite{Farwell_Donchin}. В данном исследовании было описано устройство для набора текста. На экране изображалась таблица доступных для набора символов, строки и столбцы которой выделялись в случайном порядке, в качестве целевого стимула выступало выделение столбца/строки с желаемым на данный момент символом, в качестве нецелевых стимулов -- выделение остальных столбцов/строк.
+	\parВолна P300 -- положительное отклонение сигнала ЭЭГ, имеющее место приблизительно через 300 мс после воздействия стимула с малой вероятностью появления, описывающего некоторое действие. Для порождения подобного рода волн испытуемый должен пронаблюдать последовательность двух типов стимулов. Первый тип стимулов (т.н. {\it целевые} стимулы) являются редкими в последовательности стимулов, в отличие от другого типа стимулов (т.н. {\it нецелевые} стимулы). Таким образом, во время появления целевого стимула может быть зафиксирована мозговая активность, содержащая волны P300. Данный принцип был применен в системе {\it BCI}, разработанной в исследовании \cite{Farwell_Donchin}. В данном исследовании было описано устройство для набора текста. На экране изображалась таблица доступных для набора символов, строки и столбцы которой выделялись в случайном порядке, в качестве целевого стимула выступало выделение столбца/строки с желаемым на данный момент символом, в качестве нецелевых стимулов -- выделение остальных столбцов/строк.
 	\paragraph{Визуальные вызванные потенциалы.}
 	\par Визуальные вызванные потенциалы (англ. {\it Steady-State Visual Evoked Potentials}, {\it SSVEPs}) -- осцилляции, имеющие место в данных, полученных при помощи сенсоров, расположенных на затылке. Данные изменения могут быть результатом однородного процесса, повторяющегося с малой частотой. Подобного рода стимуляция порождает колебания той же частоты в регистрируемых сигналах головного мозга. В исследованиях по тематике нейрокомпьютерных интерфейсов потенциалы этого типа используются при одновременной демонстрации стимулов с разной частотой. Таким образом, пользователь путём концентрации на конкретном стимуле имеет возможность выбора действия, соответствующего данному стимулу.\\
 	\paragraph{Моторные вызванные потенциалы.}
 	\par Моторные вызванные потенциалы (англ. {\it Motor-Related Potentials}, {\it MRPs}) -- продолжительные отрицательные потенциалы, связанные с ожиданием или ментальным представлением выполняемого движения или действия, имеют место в сенсомоторной части скальпа в начале выполнения движения или в процессе ментального представления движения.
 	\\ \NepS {\bf Частотная мозговая активность}
-	\par В электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном, а также амплитудой, формой волны и другими характеристиками. Считается, что каждый ритм соответствует некоторому определённому состоянию мозга и связан с определёнными церебральными механизмами, а потому выделение ритмов, представляющих интерес, исходя из априорных знаний, может быть использовано для декодирования намерений пользователя.
+	\par В электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых {\it ритмами}, различающихся частотным диапазоном, а также амплитудой, формой волны и другими характеристиками. Считается, что каждый ритм соответствует некоторому определённому состоянию мозга и связан с определёнными церебральными механизмами, а потому выделение ритмов, представляющих интерес, исходя из априорных знаний, может быть использовано для декодирования намерений пользователя.
 
 \begin{table}[h]
 \centering
@@ -305,7 +305,7 @@ $\gamma$-ритм &  30+ \\ \hline
 
 	\NepS {\bf Отбор электродов}
 	\par Современные электроэнцефалографы оснащены десятками электродов, однако информация, получаемая при помощи такого количества сенсоров, является избыточной. Кроме того, увеличение числа электродов ведёт к повышению стоимости устройства и времени на подготовку к использованию, что является недопустимым для электроэнцефалографов, разработанных для коммерческого использования. В связи с этим в современных исследованиях по тематике нейрокомпьютерных интерфейсов наиболее распространены два подхода к решению данной проблемы:
-	\begin{enumerate}\itemsep-4pt
+	\begin{enumerate}[1)]\itemsep-4pt
 	\item выбор электродов с учётом априорных знаний о локализации компонент сигнала на скальпе;
 	\item использование методов отбора признаков.
 	\end{enumerate}
@@ -336,7 +336,7 @@ $$X^TX \alpha = \lambda \alpha,$$
 	\par Пусть имеется сигнал $s = [s_1, \dots, s_T].$ Для описания формы сигнала могут быть вычислены морфологические признаки, которые могут быть использованы отдельно или совместно с другими признаками. Некоторые из них перечислены ниже.
 	\begin{itemize}
 	\item 
-	{\bf Амплитуда} -- максимальное значение сигнала: $\displaystyle s_{max} = \max_{t = 1, \dots, T} {s_t}$.
+	{\bf Амплитуда} -- максимальное значение сигнала: $\displaystyle s_{max} = \max_{t = 1, \dots, T} \{{s_t}\}$.
 	\item
 	{\bf Латентность} -- момент регистрации максимального значения сигнала для вызванных потенциалов: $\displaystyle t_{max} = \arg \max_{t=1, \dots, T} \{ s_t \}$, где $s$ регистрируется в течение фиксированного промежутка после выделения стимула.
 	\item
@@ -358,7 +358,7 @@ $$X^TX \alpha = \lambda \alpha,$$
 
 	\NepS {\bf Преобразование Фурье}
 	\par Зачастую анализ сигналов проводится при помощи разложения на <<базисные>> функции, каждая из которых отвечает некоторой частоте. Таким образом можно проанализировать степень выраженности колебаний некой частоты. В частности, преобразование Фурье использует в качестве базисных функций синусоиды. Для дискретных сигналов, имеющих место в задаче построения нейрокомпьютерного интерфейса, применяется дискретное преобразование Фурье.
-	\par Пусть имеется дискретный сигнал $x = (x_0, \dots, x_{N-1})$. Тогда его можно представить в виде линейной комбинации дискретных синусоид следующего вида:
+	\par Пусть имеется дискретный сигнал $x = (\, x_0, \, \ldots, \, x_{N-1}\, )$. Тогда его можно представить в виде линейной комбинации дискретных синусоид следующего вида:
 $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \, \sum_{k=0}^{\frac{N}{2}} A_k \cos{\frac{2 \pi k n}{N}} + \sum_{k=0}^{\frac{N}{2}} B_k \sin{\frac{2 \pi k n}{N}}, \quad n = \overline{0, N-1}.$$
 	Для каждого сигнала можно однозначно определить коэффициенты $A_k, B_k,$ называемые {\it спектром} сигнала. Получение коэффициентов при имеющемся сигнале называется {\it прямым преобразованием Фурье}, в то время как обратный процесс, синтез сигнала по имеющимся коэффициентам, называется {\it обратным преобразованием Фурье}. Наиболее часто используется {\it быстрое преобразование Фурье (БПФ)}, позволяющее выполнять преобразования значительно быстрее за счёт  наличия повторяющихся значений при вычислениях в силу периодичности функции синуса. 
 	\par По аналогии можно произвести подобное разложение и для двумерного сигнала, при этом непосредственное вычисление двумерного ДПФ по полученным формулам требует огромных вычислительных затрат. Однако можно показать, что двумерное ДПФ обладает свойством сепарабельности, то есть его можно вычислить последовательно по двум измерениям. 
@@ -431,7 +431,7 @@ $$x_n = \sum_{k=0}^{\frac{N}{2}} C_k \cos{\frac{2 \pi k (n + \phi_k)}{N}}\, = \,
 \label{confusion}
 \end{table}
 
-	Таким образом, можно составить таблицу~\ref{confusion}. Чувствительностью (англ. {\it true positive rate, TPR}) называется доля верно классифицированных целевых эпох, специфичностью (англ. {\it false positive rate, FPR}) -- доля неверно классифицированных нецелевых эпох. Данные величины могут быть вычислены по следующим формулам:
+	Таким образом, можно составить таблицу~\ref{confusion}. {\it Чувствительностью} (англ. {\it true positive rate, TPR}) называется доля верно классифицированных целевых эпох, {\it специфичностью} (англ. {\it false positive rate, FPR}) -- доля неверно классифицированных нецелевых эпох. Данные величины могут быть вычислены по следующим формулам:
 $$TPR = \frac{d}{c+d},$$
 $$FPR = \frac{b}{a+b}.$$
 	Положим $n_1 = c+d$ - количество целевых эпох, $n_2 = a+b$ - количество нецелевых эпох. Тогда битрейт может быть вычислен по следующей формуле:
@@ -469,7 +469,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 \label{field}
 \end{figure}
 
-	\par Назовём {\it пробой} последовательность из выделения некоторого визуального стимула в течение 250 мс, а также последующие 1250 мс, необходимые для обработки, классификации данных, генерации команды и выполнения перемещения курсора. Межстимульный интервал при проведении эксперимента равнялся 2500 мс, включая время, необходимое на обработку и классификацию данных. Назовём {\it сессией} последовательность проб, предпринятых для достижения курсором целевого положения.
+	\par {\it Пробой} назовем последовательность из выделения некоторого визуального стимула в течение 250 мс, а также последующие 1250 мс, необходимые для обработки, классификации данных, генерации команды и выполнения перемещения курсора. Межстимульный интервал при проведении эксперимента равнялся 2500 мс, включая время, необходимое на обработку и классификацию данных. Назовём {\it сессией} последовательность проб, предпринятых для достижения курсором целевого положения.
 	\par Запись ЭЭГ осуществлялась с частотой дискретизации 128 Гц (с внутренней частотой дискретизации устройства 2048 Гц и последующей первичной обработкой) при помощи устройства {\it Emotiv EPOC}. При записи данных устройство находилось в двух различных положениях: положение по умолчанию и инверсированное положение. В положении по умолчанию были использованы данные 10 сенсоров (F3, FC5, T7, P7, O1, O2, P8, T8, FC6, и F4), поскольку данное подмножество обеспечивает покрытие части скальпа, отвечающей за P300-волны. В инверсированном положении были использованы данные 8 сенсоров (FC6, F4, P8, AF4, AF3, F3, P7 и FC5), поскольку они покрывают центральную часть скальпа, которая считается областью, наиболее активно отвечающей за генерацию P300-волн. Положения указанных сенсоров на голове человека изображены на рис.~\ref{position}.
 
 \begin{figure}[h!]
@@ -515,7 +515,7 @@ $$BR = \frac{d}{n_1 + n_2} \times \frac{60}{ISI} \times \log_2 (N_{st}),$$
 	\paragraph{Выделение отдельных проб.}
 	\par После этого из полученных данных были выделены отдельные пробы продолжительностью 1500 мс. Начало пробы совпадало с началом выделения визуального стимула на экране компьютера, конец пробы приходился на момент через 1500 мс после начала выделения стимула (250 мс выделения визуального стимула и 1250 мс ожидания). Таким образом, для дальнейшей обработки и определения наличия волн P300 имеются данные, представленные в виде потенциалов, зарегистрированных для 192 моментов времени для каждого из сенсоров после выделения каждого из визуальных стимулов.
 	\paragraph{Фильтрация.}
-	\par Были предприняты попытки использовать несколько типов цифровых фильтров для обработки полученных сигналов: полосно-пропускной фильтр Чебышева 4ого порядка 1ого типа, фильтр Баттерворта и эллиптический полосно-пропускной фильтр с полосой пропускания 0.16--43 Гц.
+	\par Были проведены эксперименты с использованием различных типов цифровых фильтров для обработки полученных сигналов: полосно-пропускной фильтр Чебышева 4-го порядка 1-го типа, фильтр Баттерворта и эллиптический полосно-пропускной фильтр с полосой пропускания 0.16--43 Гц.
 	\paragraph{Мeтод независимых компонент.}
 	\par К данным ЭЭГ, подвергнутым фильтрации, был применен метод независимых компонент для извлечения независимых источников. Была использована реализация алгоритма {\it FastICA} для {\tt MATLAB}. Описание алгоритма было представлено в предыдущих разделах. Более подробно алгоритм описан в \cite{FastICA}.
 
